# PytestPrueba

./: .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml
data/: accounts.csv  dataset-metadata.json
medium_collector/: __main__.py  csv_configs.py  kaggle_datasets.py  s3.py
medium_collector/download/: download.py  parser.py  reader.py  writer.py
tests/: conftest.py
tests/fixtures/files/: articles_mails.csv  mails.csv
tests/unit/: conftest.py  test_download.py  test_mail_writers.py  test_parser.py  test_reader.py  test_s3.py
